--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-    "name": "Bgt-V2",
+    "name": "recreation-V2",
     "description": "ᴀ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜꜱɪᴄ ᴘʟᴀʏᴇʀ ʙᴏᴛ, ᴡʀɪᴛᴛᴇɴ ɪɴ ᴘʏᴛʜᴏɴ ᴡɪᴛʜ ᴘʏʀᴏɢʀᴀᴍ ᴀɴᴅ ᴘʏ-ᴛɢᴄᴀʟʟꜱ.",
     "repository": "https://github.com/BikashHalderNew/Bgtplayer",
-    "logo": "https://telegra.ph/file/4d7a997a6c8c4eb406829.jpg",
+    "logo": "https://graph.org/file/02f6fb42ada1eddfe0b8e.jpg",
     "keywords": [
     "python3",
     "telegram",
@@ -36,7 +36,7 @@
       },
       "MUSIC_BOT_NAME": {
         "description": "A name for your Music Bot. You can use special characters",
-        "value": "🌟⃝🌸𓆩🇧𝗚𝗧🎸🇲𝗨𝗦𝗜𝗖🎸🇧𝗢𝗧𓆪💫⃟👑 ",
+        "value": "Recreation_1bot ",
         "required": true
       },
       "OWNER_ID": {
